Bug 521245 - Use platform sin/cos/tan on Win32 (r=rreitmai,edwsmith)